[workspace]
members = [
    "fee_analysis",
    "tip_distribution_analysis"
]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
anchor-lang = "0.28.0"
clap = { version = "4.4.11", features = ["derive", "env"] }
env_logger = "0.10.1"
jito-tip-distribution = { git = "https://github.com/jito-foundation/jito-programs", rev = "b8f8d315306d6ac32450bd1aa23b7c1322a83bc7", features = ["no-entrypoint"] }
log = "0.4.20"
solana-rpc-client = "1.16.23"
solana-rpc-client-api = "1.16.23"
solana-sdk = "1.16.23"
solana-storage-bigtable = "1.16.23"
tokio = { version = "1.32.0", features = ["full"] }
solana-account-decoder = "1.16.23"
num_cpus = "1.16.0"
itertools = "0.12.0"
futures = "0.3.29"
futures-util = "0.3.29"
solana-transaction-status = "1.16.23"
solana-runtime = "1.16.23"
lazy_static = "1.4.0"